fixed medals overflow not showing

--- a/css/player.css
+++ b/css/player.css
@@ -128,7 +128,7 @@
   flex-wrap: nowrap;
   justify-content: flex-end;
   max-width: 33%;
-  overflow: hidden;
+  overflow: visible;
   pointer-events: none;
   z-index: 2;
 }
